# mcp-memory-system

./: .env  .gitignore  LICENSE  README.md  app.py  mcp_server.py  pyproject.toml  requirement.txt
adapters/: __init__.py
adapters/mcp/: __init__.py  server.py
adapters/streamlit_ui/: __init__.py  app.py
data/faiss/: memory_index.faiss  memory_index.meta.json
data/imports/: 3cf5fb840e1b4e5491623b206d086932_Personal Branding Plan.docx  6d41202842ff4a268a6c2a8a7aed5e69_PrashantKSingh.txt  79e10622fed04668b1cde319908c755a_AI Practice Hiring Plan.docx  7d5fef940431459bb08a80ac99742258_AI_Internship_Program.docx  93206a93710c4c319210e14957c74669_Active Learning in the Wild - Building Better AI Models with Less Data.docx  f5d151960fa440199ca0316336ff889f_AI Practice Hiring Plan.txt
data/sqlite/: memory.db
memory_core/: __init__.py
memory_core/citations/: __init__.py  service.py
memory_core/domain/: __init__.py  enums.py  models.py
memory_core/embeddings/: __init__.py  sentence_transformers.py
memory_core/ingestion/: __init__.py  chunking.py  parsers.py  service.py
memory_core/interfaces/: __init__.py  citations.py  embeddings.py  graph.py  llm.py  parsing.py  retrieval.py  services.py  storage.py
memory_core/llm/: __init__.py  ollama.py
memory_core/ranking/: __init__.py  models.py  service.py
memory_core/retrieval/: __init__.py  service.py
memory_core/services/: __init__.py  lifecycle.py  merge.py  review.py
memory_core/session/: service.py  (+1 more)
personal_context_mcp_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+12 files in other folders)
